Projectcomp: fix too long names

--- a/frontend/src/App/app.scss
+++ b/frontend/src/App/app.scss
@@ -295,6 +295,7 @@ md-menu-content {
 
   .project-selector {
     md-input-container {
+      max-width: 50vw;
       margin: 0 0 0 12px !important;
       padding: 0 !important;
 
