--- a/frontend/src/Common/ProjectComponent/ProjectComponent.scss
+++ b/frontend/src/Common/ProjectComponent/ProjectComponent.scss
@@ -1,4 +1,5 @@
 @import "../../variables.scss";
+@import "../../mixins.scss";
 
 projectcomp {
 
@@ -11,97 +12,89 @@ projectcomp {
   }
 
   md-card {
-
     overflow: hidden;
+    outline: none;
 
     .project-container {
-
       height: auto;
 
       .project-logo {
-
-        height: 115px;
         width: 115px;
+        height: 115px;
         border-right: 1px solid $color-gray-light;
         background: $color-gray-lighter;
+
         md-icon {
           width: 40px;
           height: 40px;
-          font-size: 40px;
           color: $color-white;
+          font-size: 40px;
         }
-
       }
 
       .text-container {
-
         width: 100%;
 
         .upper {
-
-          height: 55px;
+          height: 60px;
           cursor: default;
 
           .basic {
-
-            padding: 8px;
+            padding: 10px 12px;
 
             .name, .org-country {
               display: block;
+              padding-right: 25px;
+
+              @include text-truncate();
             }
 
             .name {
               color: $color-primary;
-              font-size: 16px;
+              font-size: $body-font-size-base;
             }
 
             .org-country {
               color: $text-primary;
-              font-size: 16px;
+              font-size: $body-font-size-base;
             }
           }
 
           .donors {
-
+            padding: 8px;
             min-width: 65px;
             border-left: 1px solid $color-gray-lightest;
-            padding: 8px;
 
             .nr {
-
               display: block;
-              font-size: 14px;
-              font-weight: 500;
               text-align: center;
+              font-weight: 500;
+              font-size: 14px;
               line-height: 24px;
-
             }
 
 
             .static {
               display: block;
-              text-align: center;
               color: $text-secondary;
+              text-align: center;
               font-size: 12px;
             }
           }
 
           .followers {
-
+            padding: 8px;
             min-width: 90px;
             border-left: 1px solid $color-gray-lightest;
-            padding: 8px;
 
 
             .nr {
-
               display: block;
-              font-size: 14px;
-              font-weight: 500;
               text-align: center;
+              font-weight: 500;
+              font-size: 14px;
 
               md-icon {
-
                 font-size: 18px;
                 transform: translate(0, 1px);
 
@@ -119,11 +112,10 @@ projectcomp {
               }
             }
 
-
             .static {
               display: block;
-              text-align: center;
               color: $text-secondary;
+              text-align: center;
               font-size: 12px;
             }
           }
@@ -131,7 +123,6 @@ projectcomp {
         }
 
         .lower {
-
           height: 55px;
           border-top: 1px solid $color-gray-lightest;
 
