--- a/frontend/src/Common/SearchableSelectionMenu/SearchableSelectionMenu.scss
+++ b/frontend/src/Common/SearchableSelectionMenu/SearchableSelectionMenu.scss
@@ -55,6 +55,10 @@ ssmenu.large {
   }
 }
 
+.md-select-menu-container {
+  max-width: 50vw;
+}
+
 .md-select-menu-container.small {
   md-option {
     padding: 0 12px 0 26px;
